# Marty-Protocol

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SPECIFICATION.md  VERSIONING.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
cedar/: mip.cedarschema
docs/: adr-template.md  cedar-integration-guide.md  cedar-policies.md  design-principles.md  format-mapping.md  glossary.md  implementation-guide.md  migration-guide.md
enums/: api-key-scopes.json  applicant-statuses.json  approval-strategies.json  channel-types.json  compliance-codes.json  credential-formats.json  credential-ranking-strategies.json  device-platforms.json  fallback-policies.json  flow-statuses.json  flow-types.json  issuance-protocols.json  network-modes.json  notification-priorities.json  predicate-types.json  revocation-check-modes.json  revocation-methods.json  revocation-reasons.json  revocation-timing-modes.json  trust-source-types.json  validation-algorithms.json  zk-circuits.json
reference/python/: pyproject.toml
reference/python/mip_types/: __init__.py  enums.py  models.py
schemas/: api-key.json  applicant.json  application-template.json  biometric-enrollment.json  cascade-revocation-operation.json  compliance-profile.json  credential-template.json  deployment-profile.json  device-registration.json  flow-execution.json  flow.json  issuance.json  issued-credential.json  issuer-entity.json  lane.json  mip-configuration.json  notification-payload.json  notification-target.json  organization-trust-profile.json  (+17 more)
(+155 files in other folders)
